--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-/<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="blocJams">
 <head lang="en">
     <meta charset="UTF-8">
@@ -25,12 +25,12 @@
 </nav>
 <ui-view></ui-view>
 
-    {{ 2 + 2 }}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/fixtures.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/CollectionCtrl.js"></script>
+    <script src="/scripts/controllers/AlbumCtrl.js"></script>
 </body>
 </html>
